added validation for form

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,10 +1,15 @@
+//colors
+//root
+//  --BG: #FFFEFB
+//  --text: #3F3F3F
+
 *, *:before, *:after
   box-sizing: border-box
 
 body
   font-family: 'Source Sans Pro', sans-serif
   background: rgba(255, 254, 251, 0.8)
-h1, h2, h3, h4, h5, h6
+h1, h2, h3, h4, h5, h6, p
   margin: 0
 
 a
@@ -17,7 +22,7 @@ ul, li
 
 .container
   max-width: 1440px
-  width: 1240px
+  //width: 1240px
   margin: 0 auto
   padding: 32px
   display: flex
@@ -29,3 +34,4 @@ ul, li
   margin-bottom: 16px
   line-height: 35px
   color: #3F3F3F
+  //color: var(--text)
